# pmp-wasm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
js/: remeshThreeAdapter.ts  remeshWasmWrapper.ts
src/: remesh_api.cpp
